# eldritchd

./: CMakeLists.txt  prepare-builds.sh  readme.md
etc/: eldritch.rc
src/: CMakeLists.txt  Makefile  authenticate.h  config.h  config.h.in  configuration.c  configuration.h  contenttype.c  contenttype.h  eldritch.c  forker.c  forker.h  hash.c  hash.h  http.c  http.h  httpd.c  io.c  io.h  test.c  url.c  url.h  utils.c  utils.h  version.h
test/: CMakeLists.txt  minunit.h  test_configuration.c  test_contenttype.c  test_io.c  test_url.c
