include_directories("${eldritch_BINARY_DIR}" ${eldritch_SOURCE_DIR}/src)
add_executable(test_url test_url.c)
add_executable(test_contenttype test_contenttype.c)
add_executable(test_configuration test_configuration.c)
target_link_libraries(test_url eldritch)
target_link_libraries(test_contenttype eldritch)
target_link_libraries(test_configuration eldritch)
